
  Closes #4369 and #6523

* ``is_class_subscriptable_pep585_with_postponed_evaluation_enabled`` has been deprecated.
  Use ``subscriptable_with_postponed_evaluation_enabled`` instead.

  Ref #6536

..
  Insert your changelog randomly, it will reduce merge conflicts
  (Ie. not necessarily at the end)


What's New in Pylint 2.13.9?
============================
Release date: TBA

* Fix ``IndexError`` crash in ``uninferable_final_decorators`` method.

 Relates to #6531

* Fix a crash when accessing ``__code__`` and assigning it to a variable.

  Closes #6539


What's New in Pylint 2.13.8?
============================
Release date: 2022-05-02

* Fix a false positive for ``undefined-loop-variable`` for a variable used in a lambda
  inside the first of multiple loops.

  Closes #6419

* Fix a crash when linting a file that passes an integer ``mode=`` to
  ``open``

  Closes #6414

* Avoid reporting ``superfluous-parens`` on expressions using the ``is not`` operator.

  Closes #5930

* Fix a false positive for ``undefined-loop-variable`` when the ``else`` of a ``for``
  loop raises or returns.

  Closes #5971

* Fix false positive for ``unused-variable`` for classes inside functions
  and where a metaclass is provided via a call.

  Closes #4020

* Fix false positive for ``unsubscriptable-object`` in Python 3.8 and below for
  statements guarded by ``if TYPE_CHECKING``.

  Closes #3979


What's New in Pylint 2.13.7?
============================
Release date: 2022-04-20

* Fix a crash caused by using the new config from 2.14.0 in 2.13.x code.

  Closes #6408


What's New in Pylint 2.13.6?
============================
Release date: 2022-04-20

* Fix a crash in the ``unsupported-membership-test`` checker when assigning
  multiple constants to class attributes including ``__iter__`` via unpacking.

  Closes #6366

* Asterisks are no longer required in Sphinx and Google style parameter documentation
  for ``missing-param-doc`` and are parsed correctly.

  Closes #5815