@@ -307,6 +307,11 @@ What's New in Pylint 2.13.9?
 ============================
 Release date: TBA
 
+
+* Fix false positives for ``no-name-in-module`` and ``import-error`` for ``numpy.distutils`` and ``pydantic``.
+
+  Closes #6497
+
 * Fix ``IndexError`` crash in ``uninferable_final_decorators`` method.
 
  Relates to #6531
